--- a/monchena.html
+++ b/monchena.html
@@ -24,7 +24,7 @@
 
             <div class="col-sm-4 text-sm-center " style="margin-top: 1%;">
               
-                <a href="index.html" ><button type="button" class="btn btn-secondary"> Regresar</button></a>
+                <a href="restaurantes.html" ><button type="button" class="btn btn-secondary"> Regresar</button></a>
 
             </div>
 
