--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                       <br>
                         <img src="fotos/logocrispy1.jpg" class="card-img-top" alt="..." >
                         <div class="card-body">
-                          <h1 class="card-title" ><a href="https://www.facebook.com/crispywings.cr" target="_black"><button type="button" class="btn btn-light"><h1>Crispy Wings  Alitas</h1> </button></a>
+                          <h1 class="card-title" ><a href="crispy.html" ><button type="button" class="btn btn-light"><h1>Crispy Wings  Alitas</h1> </button></a>
                         <br>
                       
                     <br></h1>
