--- a/principal.html
+++ b/principal.html
@@ -109,7 +109,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Comidas</h5>
                       <p class="card-text">Encontraras los restaurantes mejor evaluados por la comunidad y tambien algunos recomendados dependiendo del tipo de comida que desee</p>
-                      <a href="#" class="btn btn-secondary">ir</a>
+                      <a href="restaurantes.html" class="btn btn-secondary">ir</a>
                     </div>
                   </div>
 
@@ -123,7 +123,7 @@
                       <h5 class="card-title">Entretenimiento</h5>
                       
                       <p class="card-text">En este apartado encontraras lugares donde se pueden hacer actividades en familia o entre amigos</p><br> 
-                      <a href="#" class="btn btn-secondary">ir</a>
+                      <a href="entretenimiento.html" class="btn btn-secondary">ir</a>
                     </div>
                   </div>
 
