--- a/restaurantes.html
+++ b/restaurantes.html
@@ -44,7 +44,7 @@
             <div class="col-sm-2">
                 <div class="informacion">
                 
-                  <a href="index.html" ><button type="button" class="btn btn-secondary" style="margin-top: 0%; "> Regresar</button></a>
+                  <a href="principal.html" ><button type="button" class="btn btn-secondary" style="margin-top: 0%; "> Regresar</button></a>
                     
                 </div>
 
