--- a/principal.html
+++ b/principal.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col-sm-1">
                 <div>
-                    <img src="fotos/logo1.jpg" alt="logo" class="logo">
+                    <img src="fotos/logo principal.jpg" alt="logo" class="logo">
 
                 </div>
             </div>
