--- a/Servivcios.html
+++ b/Servivcios.html
@@ -236,7 +236,7 @@
 
             </div>
 
-            <div class="col-lg-2"></div>
+            <div class="col-lg-2">boraaaaaaaaaaar</div>
 
         </div>
 
