--- a/crispy.html
+++ b/crispy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monchito</title>
+    <title>Crispy Wings</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/crispy.css">
     <link rel="stylesheet" href="css/monchena.css">
