--- a/principal.html
+++ b/principal.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Monchito</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/principal.css">
     <link rel="stylesheet" href="css/monchena.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -24,8 +25,8 @@
             </div>
 
             <div class="col-sm-3">
-                <div class="derechos">
-                    <a href="Footer">Derechos de autor</a>
+                <div class="derechos fw-bold">
+                    <a href="principal.html#footer">Derechos de autor</a>
                 </div>
             </div>
 
@@ -157,12 +158,21 @@
             crossorigin="anonymous"></script>
     </body>
 
-    <footer style="background-color:#B0C05D ;">
+    <footer id="footer" style="background-color:#B0C05D ;">
+
+        <div class="row">
+
+            <div class="col-lg-12  col-md-12 col-xs-12 text-center fw-bold m-5 cred" >
+                Echo por: <br>
+                Ian Mesen Cruz <br>
+                Johel Morales Ramirez
+            </div>
+
 
    
         <div class="row">
     
-            <div class="col-sm-12"> <div class="anclar"> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-chevron-double-up" style="margin-top: 28% ; margin-left: 30%; background-color: #303134; border-radius: 50%;" viewBox="0 0 16 16">
+            <div class="col-lg-12 col-xs-12 "> <div class="anclar"> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-chevron-double-up" style="margin-top:30%; margin-left: 25%; background-color: #303134; border-radius: 50%;" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z"/>
                 <path fill-rule="evenodd" d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
               </svg></a></div></div>
