--- a/Servivcios.html
+++ b/Servivcios.html
@@ -13,7 +13,7 @@
 
 </head>
 <div class="container-fluid">
-    <header class="header">
+    <header class="header2">
 
         <div class="row">
             <div class="col-sm-1">
@@ -53,7 +53,7 @@
 
         <div class="row">
 
-            <div class="col-lg-4"></div
+            <div class="col-lg-4"></div>
 
             <div class="col-lg-4 ">
 
@@ -236,7 +236,7 @@
 
             </div>
 
-            <div class="col-lg-2">boraaaaaaaaaaar</div>
+            <div class="col-lg-2"></div>
 
         </div>
 
@@ -245,11 +245,11 @@
 </div>
 
 
-<br><br><br><br>
+<br><br><br><br><br><br>
 
 </body>
 
-<footer style="background-color:#B0C05D ;">
+<footer style="background-color:#33006d ;">
 
    
     <div class="row">
