--- a/ccm.html
+++ b/ccm.html
@@ -28,7 +28,8 @@
             <div class="col-sm-7">
                 <div>
                     <h1>
-                        <img src="fotos/logoccm.png" alt="">
+                        <a href="https://ccmcinemas.com/cines/2/" target="_blank"> <img src="fotos/logoccm.png" alt=""></a>
+                       
                     </h1>
                 </div>
             </div>
@@ -37,7 +38,7 @@
             <div class="col-sm-2">
                 <div style="margin-top: 10%;">
 
-                    <a href="principal.html"><button type="button" class="btn btn-secondary" style="margin-top: 0%; ">
+                    <a href="entretenimiento.html"><button type="button" class="btn btn-secondary" style="margin-top: 0%; ">
                             Regresar</button></a>
 
                 </div>
