--- a/piscinas.html
+++ b/piscinas.html
@@ -69,7 +69,7 @@
                     Ubicaciones
                 </div>
                 <div style="margin-top: 5%; margin-left: 1%;">
-                    en algunas piscinas
+                    de algunas piscinas
                 </div>
                 <div style="margin-top: 5%; margin-left: 2%;">
                     de San Ramon
@@ -88,7 +88,7 @@
                     Donde podras ejercitarse
                 </div>
                 <div>
-                    Y pasar un buen rato en familia
+                    y pasar un buen rato en familia
                 </div>
 
                 <br>
@@ -263,7 +263,11 @@
             </div>
         </div>
 
-
+<br>
+<br>
+<br>
+<br>
+<br>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
@@ -275,7 +279,7 @@
 
             <div class="col-sm-12">
                 <div class="anclar"> <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-                            fill="white" class="bi bi-chevron-double-up" style="margin-top:10% ; margin-left: 95%;"
+                            fill="white" class="bi bi-chevron-double-up" style="margin-top:30% ; margin-left: 30%;"
                             viewBox="0 0 16 16">
                             <path fill-rule="evenodd"
                                 d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z" />
